tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/fault_abort/tproxy/to_b/_test_context/VirtualService.2993001811.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - b
  http:
  - fault:
      abort:
        httpStatus: 418
        percentage:
          value: 100
    route:
    - destination:
        host: b
